<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/registrate2"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textSize="35dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/etregisemail"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/etregiscontr"
        android:hint="@string/contraseña" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="btregistrar"/>
</LinearLayout>