<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clase.hibernateandroid2016.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/login"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="40dp"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etemail"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etcontrasena"
        android:layout_below="@+id/etemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/contraseña" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/btentrar"
        android:layout_below="@+id/etcontrasena"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="96dp"
        android:onClick="btentrar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/btregistrar"
        android:layout_below="@+id/btentrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btregistrar"/>
</RelativeLayout>
